--- a/core/src/main/flex/org/dukecon/DukeConApplication.mxml
+++ b/core/src/main/flex/org/dukecon/DukeConApplication.mxml
@@ -1,21 +1,53 @@
 <?xml version="1.0"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
-               xmlns:s="library://ns.adobe.com/flex/spark">
+               xmlns:s="library://ns.adobe.com/flex/spark"
+               creationComplete="onCreationComplete(event)">
 
     <fx:Metadata>
         [ResourceBundle("dukecon")]
     </fx:Metadata>
 
+    <fx:Declarations>
+        <s:HTTPService id="dukeServer" url="http://localhost:8080/talks/" method="GET"
+                       result="onResult(event)" fault="onFault(event)"/>
+    </fx:Declarations>
+
     <fx:Script>
         <![CDATA[
+        import mx.collections.ArrayCollection;
+        import mx.events.FlexEvent;
+        import mx.rpc.events.FaultEvent;
+        import mx.rpc.events.ResultEvent;
+
+        [Bindable]
+        var talks:ArrayCollection;
+
+        protected function onCreationComplete(event:FlexEvent):void {
+            dukeServer.contentType = "application/json";
+            dukeServer.headers = { Accept:"application/json" };
+            dukeServer.send();
+
+            talks = new ArrayCollection();
+        }
 
         public function get currentLocale():String {
             return resourceManager.getLocales()[0];
         }
 
+        protected function onResult(event:ResultEvent):void {
+            var result:Object = JSON.parse(String(event.result));
+            talks = new ArrayCollection(result as Array);
+        }
+
+        protected function onFault(event:FaultEvent):void {
+            trace(event);
+        }
+
+
         ]]>
     </fx:Script>
 
-    <s:Label id="label" text="{resourceManager.getString('dukecon','greeting')}"/>
+    <s:List id="talkList" dataProvider="{talks}" width="100%" height="100%"
+            itemRenderer="org.dukecon.itemrenderer.TalkItemRenderer"/>
 
 </s:Application>
