--- a/core/src/main/flex/DukeConApplication.mxml
+++ b/core/src/main/flex/DukeConApplication.mxml
@@ -3,13 +3,21 @@
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark">
 
-    <s:ViewNavigator label="conference" icon="@Embed('/conference.png')"
+    <fx:Metadata>
+        [ResourceBundle("dukecon")]
+    </fx:Metadata>
+
+    <s:ViewNavigator label="{resourceManager.getString('dukecon', 'main.title')}"
+                     icon="@Embed('/conference.png')"
                      firstView="org.dukecon.views.MainView" width="100%" height="100%"/>
-    <s:ViewNavigator label="tracks" icon="@Embed('/track.png')"
+    <s:ViewNavigator label="{resourceManager.getString('dukecon', 'tracks.title')}"
+                     icon="@Embed('/track.png')"
                      firstView="org.dukecon.views.TracksView" width="100%" height="100%"/>
-    <s:ViewNavigator label="talks" icon="@Embed('/talk.png')"
+    <s:ViewNavigator label="{resourceManager.getString('dukecon', 'talks.title')}"
+                     icon="@Embed('/talk.png')"
                      firstView="org.dukecon.views.TalksView" width="100%" height="100%"/>
-    <s:ViewNavigator label="speakers" icon="@Embed('/speaker.png')"
+    <s:ViewNavigator label="{resourceManager.getString('dukecon', 'speakers.title')}"
+                     icon="@Embed('/speaker.png')"
                      firstView="org.dukecon.views.SpeakersView" width="100%" height="100%"/>
 
 </s:TabbedViewNavigatorApplication>
