--- a/core/src/main/flex/org/dukecon/views/TalksView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TalksView.mxml
@@ -3,7 +3,12 @@
   Created by christoferdutz on 15.05.15.
 -->
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-        creationComplete="onCreationComplete(event)">
+        creationComplete="onCreationComplete(event)"
+        title="{resourceManager.getString('dukecon', 'talks.title')}">
+
+  <fx:Metadata>
+    [ResourceBundle("dukecon")]
+  </fx:Metadata>
 
   <fx:Script>
     <![CDATA[
