--- a/core/src/main/flex/DukeConApplication.mxml
+++ b/core/src/main/flex/DukeConApplication.mxml
@@ -1,21 +1,38 @@
 <?xml version="1.0"?>
 <s:TabbedViewNavigatorApplication
         xmlns:fx="http://ns.adobe.com/mxml/2009"
-        xmlns:s="library://ns.adobe.com/flex/spark">
+        xmlns:s="library://ns.adobe.com/flex/spark"
+        creationComplete="onCreationComplete(event)">
 
     <fx:Metadata>
         [ResourceBundle("dukecon")]
     </fx:Metadata>
 
+    <fx:Script>
+        <![CDATA[
+        import mx.events.FlexEvent;
+
+        import org.dukecon.controller.ConferenceController;
+
+        protected function onCreationComplete(event:FlexEvent):void {
+            ConferenceController.instance;
+        }
+
+        ]]>
+    </fx:Script>
+
     <s:ViewNavigator label="{resourceManager.getString('dukecon', 'main.title')}"
                      icon="@Embed('/conference.png')"
                      firstView="org.dukecon.views.MainView" width="100%" height="100%"/>
+    <s:ViewNavigator label="{resourceManager.getString('dukecon', 'schedule.title')}"
+                     icon="@Embed('/schedule.png')"
+                     firstView="org.dukecon.views.ScheduleView" width="100%" height="100%"/>
     <s:ViewNavigator label="{resourceManager.getString('dukecon', 'tracks.title')}"
                      icon="@Embed('/track.png')"
                      firstView="org.dukecon.views.TracksView" width="100%" height="100%"/>
-    <s:ViewNavigator label="{resourceManager.getString('dukecon', 'talks.title')}"
-                     icon="@Embed('/talk.png')"
-                     firstView="org.dukecon.views.TalksView" width="100%" height="100%"/>
+    <s:ViewNavigator label="{resourceManager.getString('dukecon', 'locations.title')}"
+                     icon="@Embed('/location.png')"
+                     firstView="org.dukecon.views.LocationsView" width="100%" height="100%"/>
     <s:ViewNavigator label="{resourceManager.getString('dukecon', 'speakers.title')}"
                      icon="@Embed('/speaker.png')"
                      firstView="org.dukecon.views.SpeakersView" width="100%" height="100%"/>
