--- a/core/src/main/flex/org/dukecon/views/LocationsView.mxml
+++ b/core/src/main/flex/org/dukecon/views/LocationsView.mxml
@@ -2,9 +2,10 @@
 <!--
   Created by christoferdutz on 15.05.15.
 -->
-<s:View xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+        xmlns:s="library://ns.adobe.com/flex/spark"
         creationComplete="onCreationComplete(event)"
-        title="{resourceManager.getString('dukecon', 'talks.title')}">
+        title="{resourceManager.getString('dukecon', 'locations.title')}">
 
   <fx:Metadata>
     [ResourceBundle("dukecon")]
@@ -24,17 +25,17 @@
     protected function onCreationComplete(event:FlexEvent):void {
       ConferenceController.instance.addEventListener(
               ConferenceDataChangedEvent.CONFERENCE_DATA_CHANGED, onConferenceDataChanged);
-      listData = ConferenceController.instance.talks;
+      listData = ConferenceController.instance.locations;
     }
 
     protected function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
-      listData = ConferenceController.instance.talks;
+      listData = ConferenceController.instance.locations;
     }
     ]]>
   </fx:Script>
 
   <s:List width="100%" height="100%"
-          itemRenderer="org.dukecon.itemrenderer.TalkItemRenderer"
+          itemRenderer="org.dukecon.itemrenderer.LocationItemRenderer"
           dataProvider="{listData}"/>
 
 </s:View>
