--- a/core/src/main/flex/org/dukecon/views/TracksView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TracksView.mxml
@@ -2,7 +2,8 @@
 <!--
   Created by christoferdutz on 15.05.15.
 -->
-<s:View xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
+        xmlns:s="library://ns.adobe.com/flex/spark"
         creationComplete="onCreationComplete(event)"
         title="{resourceManager.getString('dukecon', 'tracks.title')}">
 
