--- a/core/src/main/flex/DukeConApplication.mxml
+++ b/core/src/main/flex/DukeConApplication.mxml
@@ -2,7 +2,8 @@
 <s:TabbedViewNavigatorApplication
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        creationComplete="onCreationComplete(event)">
+        creationComplete="onCreationComplete(event)"
+        applicationDPI="320">
 
     <fx:Metadata>
         [ResourceBundle("dukecon")]
