--- a/core/src/main/flex/org/dukecon/views/ScheduleDayView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleDayView.mxml
@@ -3,13 +3,23 @@
   Created by christoferdutz on 30.05.15.
 -->
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
-        xmlns:s="library://ns.adobe.com/flex/spark">
+        xmlns:s="library://ns.adobe.com/flex/spark"
+        title="{formattedDate}">
+
+  <fx:Declarations>
+    <s:DateTimeFormatter id="formatter" dateStyle="medium" timeStyle="none"/>
+    <s:DateTimeFormatter id="timeFormatter" dateTimePattern="HH:mm"/>
+  </fx:Declarations>
 
   <fx:Script>
     <![CDATA[
     import mx.collections.ArrayCollection;
 
     import org.dukecon.controller.ConferenceController;
+    import org.dukecon.model.Talk;
+
+    [Bindable]
+    protected var formattedDate:String;
 
     [Bindable]
     protected var dataProvider:ArrayCollection;
@@ -21,19 +31,86 @@
 
     override public function set data(value:Object):void {
       super.data = value;
-      if(value) {
-        dataProvider = ConferenceController.instance.getTalksForDay(String(value));
+
+      if (value) {
+        var key:String;
+        var matches:Array = String(value).match(/(\d\d\d\d)-(\d\d)-(\d\d)/);
+        var date:Date = new Date(int(matches[1]), int(matches[2]), int(matches[3]));
+        formattedDate = formatter.format(date);
+
+        var talksForDay:ArrayCollection = ConferenceController.instance.getTalksForDay(String(value));
+        var talkIndex:Object = {};
+        for each(var talk:Talk in talksForDay) {
+          var start:String = timeFormatter.format(talk.start);
+          var end:String = timeFormatter.format(talk.end);
+          key = talk.location + "-" + start + " - " + end;
+          talkIndex[key] = talk;
+        }
+        var timeSlots:ArrayCollection = ConferenceController.instance.getTimeSlotsForDay(String(value));
+        var locations:ArrayCollection = ConferenceController.instance.locations;
+        var gridData:Array = [];
+        for each(var location:String in locations) {
+          var item:Object = {};
+          item.location = location;
+          for each(var timeSlot:String in timeSlots) {
+            key = location + "-" + timeSlot;
+            item[timeSlot] = talkIndex[key];
+          }
+          gridData.push(item);
+        }
+        dataProvider = new ArrayCollection(gridData);
       }
+
+      updateGrid();
+    }
+
+    protected function updateGrid():void {
+      /*var columns:Array = [];
+       if(data != null) {
+       var column:MobileGridColumn = new MobileGridColumn();
+       column.dataField = "location";
+       column.headerText = "";
+       columns.push(column);
+       var timeSlots:ArrayCollection = ConferenceController.instance.getTimeSlotsForDay(String(data));
+       for each(var timeSlot:String in timeSlots) {
+       column = new MobileGridColumn();
+       column.dataField = timeSlot;
+       columns.push(column);
+       }
+       }*/
+      //dgm.columns = columns;
     }
     ]]>
   </fx:Script>
+
+  <s:navigationContent>
+      <s:Button label="&lt;" click="{navigator.popView()}"/>
+  </s:navigationContent>
 
   <s:DataGrid id="grid" lockedColumnCount="1" lockedRowCount="0" dataProvider="{dataProvider}"
               width="100%" height="100%">
     <s:columns>
       <s:ArrayList>
-        <s:GridColumn dataField="location" headerText=""/>
-        <s:GridColumn dataField="title" headerText="Titel"/>
+        <s:GridColumn dataField="location" headerText="" width="40"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.LocationItemRenderer"/>
+        <s:GridColumn dataField="09:00 - 09:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
+        <s:GridColumn dataField="10:00 - 10:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
+        <s:GridColumn dataField="11:00 - 11:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
+        <s:GridColumn dataField="12:00 - 12:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
+        <s:GridColumn dataField="13:00 - 13:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
+        <s:GridColumn dataField="14:00 - 14:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
+        <s:GridColumn dataField="15:00 - 15:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
+        <s:GridColumn dataField="16:00 - 16:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
+        <s:GridColumn dataField="17:00 - 17:45" width="600"
+                      itemRenderer="org.dukecon.itemrenderer.schedule.TalkItemRenderer"/>
       </s:ArrayList>
     </s:columns>
   </s:DataGrid>
