--- a/core/src/main/flex/org/dukecon/itemrenderer/schedule/TalkItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/schedule/TalkItemRenderer.mxml
@@ -6,8 +6,17 @@
 
   <fx:Script>
     <![CDATA[
+    import org.dukecon.controller.ConferenceController;
     import org.dukecon.controller.TrackController;
     import org.dukecon.model.Talk;
+
+    [Embed(source="/star-unselected.png")]
+    [Bindable]
+    public var starUnselected:Class;
+
+    [Embed(source="/star-selected.png")]
+    [Bindable]
+    public var starSelected:Class;
 
     [Bindable]
     protected var talk:Talk;
@@ -23,12 +32,34 @@
     override public function set data(value:Object):void {
       super.data = value;
       talk = Talk(value[column.dataField]);
-      if(talk) {
+      if (talk) {
         color = TrackController.instance.getColorForTrack(talk.track);
+        languageImage.visible = talk.language == "english";
       } else {
         color = 0xffffff;
+        languageImage.visible = false;
+      }
+      updateSelectionIcon();
+    }
+
+    protected function updateSelectionIcon():void {
+      if (talk) {
+        favoriteImage.source = ConferenceController.instance.isTalkSelected(talk) ? starSelected : starUnselected;
+      } else {
+        favoriteImage.source = null;
       }
     }
+
+    protected function toggleSelection(event:MouseEvent):void {
+      var controller:ConferenceController = ConferenceController.instance;
+      if (controller.isTalkSelected(talk)) {
+        controller.unselectTalk(talk);
+      } else {
+        controller.selectTalk(talk);
+      }
+      updateSelectionIcon();
+    }
+
     ]]>
   </fx:Script>
 
@@ -41,10 +72,14 @@
     </s:stroke>
   </s:Rect>
 
+  <s:Image id="favoriteImage" top="10" right="20" click="toggleSelection(event)"/>
+
   <s:VGroup top="10" left="10" right="10" bottom="10" gap="30">
     <s:Label text="{talk.title}" fontWeight="bold" width="420" height="100"/>
     <s:RichText text="{talk.abstractText}" width="780" height="150"/>
     <s:Label text="mehr..." fontWeight="bold" visible="{talk != null}"/>
   </s:VGroup>
+
+  <s:Image id="languageImage" bottom="10" right="20" source="@Embed('/english-small.png')" visible="false"/>
 
 </s:GridItemRenderer>
