--- a/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
@@ -19,6 +19,7 @@
     import org.dukecon.controller.ConferenceController;
     import org.dukecon.events.ConferenceDataChangedEvent;
     import org.dukecon.events.ScheduleEvent;
+    import org.dukecon.events.ScheduleTalkSelectedEvent;
 
     [Bindable]
     protected var listData:ArrayCollection;
