--- a/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
@@ -5,7 +5,7 @@
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
         creationComplete="onCreationComplete(event)"
-        title="{resourceManager.getString('dukecon', 'speakers.title')}">
+        title="{resourceManager.getString('dukecon', 'schedule.title')}">
 
   <fx:Metadata>
     [ResourceBundle("dukecon")]
@@ -19,7 +19,6 @@
     import org.dukecon.controller.ConferenceController;
     import org.dukecon.events.ConferenceDataChangedEvent;
     import org.dukecon.events.ScheduleEvent;
-    import org.dukecon.events.ScheduleTalkSelectedEvent;
 
     [Bindable]
     protected var listData:ArrayCollection;
@@ -38,7 +37,6 @@
     protected function onDaySelected(event:ScheduleEvent):void {
       navigator.pushView(ScheduleDayView, event.day);
     }
-
     ]]>
   </fx:Script>
 
