--- a/core/src/main/flex/org/dukecon/itemrenderer/SpeakerItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/SpeakerItemRenderer.mxml
@@ -1,45 +1,58 @@
 <?xml version="1.0"?>
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
                 xmlns:s="library://ns.adobe.com/flex/spark"
+                xmlns:u="org.dukecon.utils.*"
                 height="136">
 
-  <fx:Script>
+    <fx:Script>
     <![CDATA[
-    [Bindable("dataChange")]
-    override public function get data():Object {
-      return super.data;
-    }
+        import org.dukecon.controller.SpeakerController;
 
-    override public function set data(value:Object):void {
-      super.data = value;
-      //backgroundColor.color = TrackController.instance.getColorForTrack(String(value));
-    }
-    ]]>
+        [Bindable]
+        protected var speakerIcon:Class;
+
+        [Bindable("dataChange")]
+        override public function get data():Object {
+            return super.data;
+        }
+
+        override public function set data(value:Object):void {
+            super.data = value;
+
+            if (value) {
+                speakerIcon = SpeakerController.instance.getIconForSpeaker(String(value));
+            } else {
+                speakerIcon = null;
+            }
+            itemLabel.width = this.parent.parent.width - 168;
+
+            invalidateDisplayList();
+        }
+        ]]>
   </fx:Script>
 
+    <s:Rect top="0" left="0" width="100%" bottom="0">
+        <s:fill>
+            <s:SolidColor color="white"/>
+        </s:fill>
+        <s:stroke>
+            <s:SolidColorStroke color="black"/>
+        </s:stroke>
+    </s:Rect>
 
-  <s:Rect top="0" left="0" width="100%" bottom="0">
-    <s:fill>
-      <s:SolidColor id="backgroundColor" color="white"/>
-    </s:fill>
-    <s:stroke>
-      <s:SolidColorStroke color="black"/>
-    </s:stroke>
-  </s:Rect>
+    <s:Rect top="8" left="8" width="120" bottom="8">
+        <s:fill>
+            <s:SolidColor color="white"/>
+        </s:fill>
+        <s:stroke>
+            <s:SolidColorStroke color="black"/>
+        </s:stroke>
+    </s:Rect>
 
-  <s:Rect top="8" left="8" width="120" bottom="8">
-    <s:fill>
-      <s:SolidColor color="white"/>
-    </s:fill>
-    <s:stroke>
-      <s:SolidColorStroke color="black"/>
-    </s:stroke>
-  </s:Rect>
+    <u:VectorImage source="{speakerIcon}" top="10" left="10" width="110" bottom="10"/>
 
-  <!--u:VectorImage id="icon" top="6" left="6" width="116" bottom="3"/-->
-
-  <s:HGroup top="8" left="150" right="18" bottom="8" verticalAlign="middle">
-    <s:Label height="100%" width="100%" text="{String(data)}" fontSize="60"/>
-  </s:HGroup>
+    <s:HGroup top="8" left="150" right="18" bottom="8" verticalAlign="middle">
+        <s:Label id="itemLabel" text="{String(data)}" styleName="listTitle"/>
+    </s:HGroup>
 
 </s:ItemRenderer>
