--- a/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
@@ -8,6 +8,12 @@
     <![CDATA[
     import org.dukecon.controller.TrackController;
 
+    [Bindable]
+    protected var trackIcon:Class;
+
+    [Bindable]
+    protected var trackColor:uint;
+
     [Bindable("dataChange")]
     override public function get data():Object {
       return super.data;
@@ -15,23 +21,20 @@
 
     override public function set data(value:Object):void {
       super.data = value;
-      icon.source = TrackController.instance.getIconForTrack(String(value));
-      backgroundColor.color = TrackController.instance.getColorForTrack(String(value));
+
+      if (value) {
+        trackColor = TrackController.instance.getColorForTrack(String(value));
+        trackIcon = TrackController.instance.getIconForTrack(String(value));
+      } else {
+        trackColor = 0xffffff;
+        trackIcon = null;
+      }
     }
+
     ]]>
   </fx:Script>
 
-
   <s:Rect top="0" left="0" width="100%" bottom="0">
-    <s:fill>
-      <s:SolidColor id="backgroundColor" color="white"/>
-    </s:fill>
-    <s:stroke>
-      <s:SolidColorStroke color="black"/>
-    </s:stroke>
-  </s:Rect>
-
-  <s:Rect top="8" left="8" width="120" bottom="8">
     <s:fill>
       <s:SolidColor color="white"/>
     </s:fill>
@@ -40,10 +43,19 @@
     </s:stroke>
   </s:Rect>
 
-  <u:VectorImage id="icon" top="6" left="6" width="116" bottom="3"/>
+  <s:Rect top="8" left="8" width="120" bottom="8">
+    <s:fill>
+      <s:SolidColor color="{trackColor}"/>
+    </s:fill>
+    <s:stroke>
+      <s:SolidColorStroke color="black"/>
+    </s:stroke>
+  </s:Rect>
+
+  <u:VectorImage source="{trackIcon}" top="10" left="10" width="110" bottom="10"/>
 
   <s:HGroup top="8" left="150" right="18" bottom="8" verticalAlign="middle">
-    <s:Label height="100%" width="100%" text="{String(data)}" fontSize="60"/>
+    <s:Label text="{String(data)}" styleName="listTitle"/>
   </s:HGroup>
 
 </s:ItemRenderer>
