--- a/core/src/main/flex/org/dukecon/itemrenderer/header/LocationItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/header/LocationItemRenderer.mxml
@@ -17,8 +17,14 @@
     ]]>
   </fx:Script>
 
+  <s:Rect top="4" left="4" right="4" bottom="4" radiusX="10" radiusY="10">
+    <s:fill>
+      <s:SolidColor color="0x1AA3B1"/>
+    </s:fill>
+  </s:Rect>
+
   <s:VGroup width="100%" height="350" verticalAlign="middle" horizontalAlign="center">
-    <s:Label text="{data.location}" rotationZ="-90"/>
+    <s:Label text="{data.location}" rotationZ="-90" styleName="title"/>
   </s:VGroup>
 
 </s:GridItemRenderer>
