--- a/core/src/main/flex/org/dukecon/views/MainView.mxml
+++ b/core/src/main/flex/org/dukecon/views/MainView.mxml
@@ -9,7 +9,23 @@
     [ResourceBundle("dukecon")]
   </fx:Metadata>
 
-  <s:Image source="@Embed('/conference-logo.jpg')"
-           width="100%" height="100%" scaleMode="letterbox"/>
+  <fx:Script>
+    <![CDATA[
+    import org.dukecon.controller.ConferenceController;
+
+    protected function onRefreshClicked(event:MouseEvent):void {
+      ConferenceController.instance.updateTalks();
+    }
+
+    ]]>
+  </fx:Script>
+
+  <s:VGroup width="100%" height="100%" horizontalAlign="center">
+    <s:Image source="@Embed('/conference-logo.jpg')"
+             width="100%" height="100%" scaleMode="letterbox"/>
+    <s:HGroup height="100%" verticalAlign="middle">
+      <s:Button id="refreshButton" label="Refresh Talk Data" click="onRefreshClicked(event)"/>
+    </s:HGroup>
+  </s:VGroup>
 
 </s:View>
