--- a/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
@@ -11,9 +11,6 @@
     [Bindable]
     protected var trackIcon:Class;
 
-    [Bindable]
-    protected var trackColor:uint;
-
     [Bindable("dataChange")]
     override public function get data():Object {
       return super.data;
@@ -23,10 +20,8 @@
       super.data = value;
 
       if (value) {
-        trackColor = TrackController.instance.getColorForTrack(String(value));
         trackIcon = TrackController.instance.getIconForTrack(String(value));
       } else {
-        trackColor = 0xffffff;
         trackIcon = null;
       }
     }
@@ -45,7 +40,7 @@
 
   <s:Rect top="8" left="8" width="120" bottom="8">
     <s:fill>
-      <s:SolidColor color="{trackColor}"/>
+      <s:SolidColor color="white"/>
     </s:fill>
     <s:stroke>
       <s:SolidColorStroke color="black"/>
