--- a/core/src/main/flex/org/dukecon/itemrenderer/TalkItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/TalkItemRenderer.mxml
@@ -7,6 +7,10 @@
         xmlns:s="library://ns.adobe.com/flex/spark"
         xmlns:u="org.dukecon.utils.*">
 
+  <fx:Metadata>
+    [ResourceBundle("dukecon")]
+  </fx:Metadata>
+
   <fx:Script>
     <![CDATA[
     import org.dukecon.controller.ConferenceController;
@@ -103,9 +107,11 @@
   <s:Label text="{talk.abstractText}" styleName="content" top="130" left="20" width="{column.width - 40}"
            height="166" visible="{talk != null}"/>
 
-  <s:Label text="mehr..."  styleName="link" bottom="10" left="20" visible="{talk != null}"
+  <s:Label text="{resourceManager.getString('dukecon', 'talks.more')}" styleName="link" bottom="10" left="20"
+           visible="{talk != null}"
            click="onMoreClicked(event)"/>
 
-  <s:Image id="languageImage" bottom="10" right="20" width="48" height="36" source="@Embed('/english-small.png')" visible="false"/>
+  <s:Image id="languageImage" bottom="10" right="20" width="48" height="36" source="@Embed('/english-small.png')"
+           visible="false"/>
 
 </s:GridItemRenderer>
