--- a/core/src/main/flex/org/dukecon/itemrenderer/header/TimeHeaderRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/header/TimeHeaderRenderer.mxml
@@ -3,8 +3,7 @@
   Created by christoferdutz on 30.05.15.
 -->
 <s:DefaultGridHeaderRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
-                             xmlns:s="library://ns.adobe.com/flex/spark"
-                             xmlns:mx="library://ns.adobe.com/flex/mx">
+                             xmlns:s="library://ns.adobe.com/flex/spark">
   <s:states>
     <s:State name="normal" />
     <s:State name="hovered" />
